# ChangeLog for app-editors/e3
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/e3/ChangeLog,v 1.28 2008/01/20 19:03:12 angelos Exp $

  20 Jan 2008; Christoph Mende <angelos@gentoo.org> e3-2.7.1.ebuild:
  Stable on amd64 wrt bug #205896

  15 Jan 2008; Dawid Węgliński <cla@gentoo.org> e3-2.7.1.ebuild:
  Stable on x86 (bug #205896)

*e3-2.7.1 (16 Dec 2007)

  16 Dec 2007; Ulrich Mueller <ulm@gentoo.org> +e3-2.7.1.ebuild:
  Version bump: yasm is now properly supported for amd64.

  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org> e3-2.7.0.ebuild:
  remove PROVIDE=virtual/editor as we have now a new-style virtual

  07 Jul 2007; Christian Faulhammer <opfer@gentoo.org> e3-2.7.0.ebuild,
  -e3-2.43.ebuild:
  stable x86, bug 184451; clean-up and adjusted DESCRIPTION

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> e3-2.43.ebuild:
  (QA) RESTRICT clean up.

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> e3-2.7.0.ebuild:
  revert last change

  17 Jun 2007; Ulrich Mueller <ulm@gentoo.org> e3-2.7.0.ebuild:
  Fix build failure on x86.

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> e3-2.7.0.ebuild:
  make it not fail on amd64

  17 Jun 2007; Christoph Mende <angelos@gentoo.org> e3-2.7.0.ebuild:
  Added ~amd64 wrt bug 182312

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> metadata.xml,
  +e3-2.7.0.ebuild, -e3-2.70.ebuild, -e3-2.41.ebuild, -e3-2.42.ebuild:
  emacs team has taken this one over
  change Ebuild name, so we can get rid of MY_PV variable
  add some quotes around variables
  do a simpler installation of man page
  kill build USE flag to avoid file collisions
  remove an unecessary dodir
  change RESTRICT from nostrip to strip
  add amd64 support
  add PROVIDE=virtual/editor
  clean up

  25 May 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  corrected ChangeLog, so it conforms to our standards

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml: