@@ -1,46 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX emacs 282 RMD160 367989f6861d2b8b71fe104e097558820e8622e4 SHA1 5de66179c41daa443a5f57008e032f2ebf6cfbf9 SHA256 86f9e0672c0c59073c638047e5f31a16bac0d4c3d427c02632eb794586c1d277
-MD5 7c6891c4910c888bcf257928763625ef files/emacs 282
-RMD160 367989f6861d2b8b71fe104e097558820e8622e4 files/emacs 282
-SHA256 86f9e0672c0c59073c638047e5f31a16bac0d4c3d427c02632eb794586c1d277 files/emacs 282
-AUX pico 282 RMD160 fe53cd84beb5aac38ed51a9977d6f65686d292ad SHA1 8fd9a40ea477e536b218214aee70174d706dd480 SHA256 51c6c9c8830d55afae60e7ea85f59890ed827234237f3e8450051823f82d3f12
-MD5 3fd320820409b1ca7554cb5d405feecf files/pico 282
-RMD160 fe53cd84beb5aac38ed51a9977d6f65686d292ad files/pico 282
-SHA256 51c6c9c8830d55afae60e7ea85f59890ed827234237f3e8450051823f82d3f12 files/pico 282
-AUX vi 282 RMD160 0d1759f5839ebafd61f606fe85ebfcb7aa1d4144 SHA1 55b0b984742ea9e50c802cbf238118564f4a02f1 SHA256 00b98417b4a857e237ad9d6f8c66e0637f6a93274f664ff9341ac74607059a35
-MD5 19815bd005f714adf48fa2359e708879 files/vi 282
-RMD160 0d1759f5839ebafd61f606fe85ebfcb7aa1d4144 files/vi 282
-SHA256 00b98417b4a857e237ad9d6f8c66e0637f6a93274f664ff9341ac74607059a35 files/vi 282
-DIST e3-2.7.0.tar.gz 239477 RMD160 4faf15dff1b44ed15faad1946c56aed13f12373c SHA1 6e3b19782ea2ecda23a4fe45b4ae6709b76312cb SHA256 ab45362282b3b3e987ef40a0c6b300aa7267fcc0bb1f9879d09bbb6445eec18d
 DIST e3-2.7.1.tar.gz 189422 RMD160 95f6ab83ec17160bb878bd657a53fa5285b5505f SHA1 3efe3f0d463c10fe2f1ed04ff7726142df8470b4 SHA256 61e16420480b1bef085952c0e5130a9151a617c3432b4c302c23740d5eb5049e
-EBUILD e3-2.7.0.ebuild 751 RMD160 9d0bd34b200f890a1f0b6f808ee7a6ec24903507 SHA1 ae7915320c1f374d164040d3f70b98ec22df8b3c SHA256 c3a59b9e856dfdfcbf8185ebd3884a503d27a3076f2911c4a815281a20defc28
-MD5 151ba458bbda3bd1a139bf8a84927f44 e3-2.7.0.ebuild 751
-RMD160 9d0bd34b200f890a1f0b6f808ee7a6ec24903507 e3-2.7.0.ebuild 751
-SHA256 c3a59b9e856dfdfcbf8185ebd3884a503d27a3076f2911c4a815281a20defc28 e3-2.7.0.ebuild 751
 EBUILD e3-2.7.1.ebuild 863 RMD160 90b50173ae6a8081b360272489b5f1262c140b4a SHA1 5cfa674fa0246687f174a1daf538c7bd5027fbc3 SHA256 06123114a8194ab4ea708e6f0d1069f9b368c9ff75d770fe6c30bc81b87713f4
 MD5 44eefccca1cdb9b918e13313ce24a175 e3-2.7.1.ebuild 863
 RMD160 90b50173ae6a8081b360272489b5f1262c140b4a e3-2.7.1.ebuild 863
 SHA256 06123114a8194ab4ea708e6f0d1069f9b368c9ff75d770fe6c30bc81b87713f4 e3-2.7.1.ebuild 863
-MISC ChangeLog 3703 RMD160 8f5665bebfd832d2709a4c7ae75dd8829e30fd58 SHA1 13ab9d918ce4bb487ff7bfa70595faeb7b1675a6 SHA256 5bb555ff4d0e1bda06cbaad8e2a8cc8de0da165cdc4fdf31495b7c72db750369
-MD5 24cf163b96e9af1c25cd63ac5e04119f ChangeLog 3703
-RMD160 8f5665bebfd832d2709a4c7ae75dd8829e30fd58 ChangeLog 3703
-SHA256 5bb555ff4d0e1bda06cbaad8e2a8cc8de0da165cdc4fdf31495b7c72db750369 ChangeLog 3703
+MISC ChangeLog 3817 RMD160 a8e03086ceff89f69b02f92fb6c2decf8366ffc1 SHA1 68e62bbd8a3861966be306ab8e809465d28fa6a0 SHA256 971dc63bf9100b07972d384dfeef4483e81ca0e8ca9e109528beb90d3f9a786f
+MD5 074964383dc0cf3efe089262548db8ff ChangeLog 3817
+RMD160 a8e03086ceff89f69b02f92fb6c2decf8366ffc1 ChangeLog 3817
+SHA256 971dc63bf9100b07972d384dfeef4483e81ca0e8ca9e109528beb90d3f9a786f ChangeLog 3817
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata.xml 158
-MD5 f923c7a6d87d2a088fb65df86e63755e files/digest-e3-2.7.0 226
-RMD160 b83e6d94c231a49e64c510639ea4ae264033d3f4 files/digest-e3-2.7.0 226
-SHA256 bd19b6f3a1f147928342c58b5c7b678ac9d61855ae1aa4de3e9443d536afb7b3 files/digest-e3-2.7.0 226
 MD5 e4955d8e9a2862897dc9d2d70d854326 files/digest-e3-2.7.1 226
 RMD160 877dc29ce8d9c75ff77aa8f144d2f6dd33b94f81 files/digest-e3-2.7.1 226
 SHA256 4b6044a44da5404cb9751d7f62b4aef2478adc19efdd1086db72aeb0c80b1496 files/digest-e3-2.7.1 226
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v1.4.8 (GNU/Linux)
 
-iD8DBQFHk5sHKhnDs22gwa8RAn+HAKCl3Lr1WO4vNHf+O17knScgG8cZUwCgpsAQ
-A6U2ajjYgQr0G8JIWYbwIB4=
-=hqg2
+iEYEARECAAYFAkeTo7sACgkQOeoy/oIi7uzV/wCdHbsi6epUEW8enZA0LNDlVydC
+bMMAoKoGdiEfonHsN/cSVTxH9MNF2cfP
+=DTtS
 -----END PGP SIGNATURE-----
