@@ -1,3 +1,0 @@
-MD5 a76dd61c52a80a1f4d3938a4ce54c62e e3-2.7.0.tar.gz 239477
-RMD160 4faf15dff1b44ed15faad1946c56aed13f12373c e3-2.7.0.tar.gz 239477
-SHA256 ab45362282b3b3e987ef40a0c6b300aa7267fcc0bb1f9879d09bbb6445eec18d e3-2.7.0.tar.gz 239477
