@@ -1,21 +1,0 @@
-#!/bin/sh
-
-E3=/usr/bin/e3
-whichE3=${E3}pi
-
-if [ -f ${E3} ]; then
-	if [ -f ${whichE3} ]; then
-		if [ $# -eq 0 ]; then
-			${whichE3}
-		else
-			for i in $@
-			do
-				${whichE3} $i
-			done
-		fi
-	else
-		echo ${whichE3}: file does not exist
-	fi
-else
-	echo "${E3}: file does not exist"
-fi
