@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/e3
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/e3/ChangeLog,v 1.28 2008/01/20 19:03:12 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/e3/ChangeLog,v 1.29 2008/01/20 19:40:12 ulm Exp $
+
+  20 Jan 2008; Ulrich Mueller <ulm@gentoo.org> -files/emacs, -files/pico,
+  -files/vi, -e3-2.7.0.ebuild:
+  Clean up.
 
   20 Jan 2008; Christoph Mende <angelos@gentoo.org> e3-2.7.1.ebuild:
   Stable on amd64 wrt bug #205896
